deployment.yml
kind: Deployment
apiVersion: apps/v1

metadata:
  name: nginx-deployment
  namespace: nginx
  labels:
    app: nginx

spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx

  template:
    metadata:
      labels:
        app: nginx
      namespace: nginx

    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80

          volumeMounts:
            - name: myVolume
              mountPath: /var/lib/mysql
              
      volumes:
        - name: myVolume
          persistentVolumeClaim: 
            claimName: mysql-pvc    # your Persistent Volume name
