ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1

metadata:
  name: online-shop-ingress
  namespace: online-shop
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  rules:
    - http:
        paths:
          - pathType: Prefix   # prefix matlab / ke baad kuch bhi aaye chalega
            path: /shop
            backend:
              service:
                name: online-shop-svc
                port:
                  number: 5173
